@@ -1,4 +1,0 @@
-.deps
-Makefile
-Makefile.in
-keysyms.c
